<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="mainmenu_title">Reportar su conducta </string>
    <string name="behavior_title">¿Qué conducta quiere reportar?</string>
    <string name="app_name">Mis conductas</string>
    <string name="dieting">Dieta</string>
    <string name="hello_world">Mis conductas</string>
    <string name="menu_settings">Mis conductas</string>
    <string name="emotions">Recorded Emotion</string>
    <string name="login_message">Entre su código para desbloquear la aplicación </string>
    <string name="login">Login</string>
    <string name="update_password">Entre su contraseña nueva</string>
   	<string name="incorrect_password">Código incorrecto, favor de tratar ótravez </string>
   	<string name="logout_reminder">Al menos que esté usando la aplicación, la aplicación se cerrará en 5 minutos</string>
    <string name="change_password">Cambiar su código</string>
	<string name="password_changed">Su código ha sido cambiado</string>
	<string name="password_not_changed">No cambió su código</string>
	<string name="password_length">Su código debe de ser 6 números</string>
	<string name="password_maxlength">No puede agregar más números</string>
	<string name="password">Password</string>
	
<!--  Binge Questions -->
    <string name="time_length">¿Por cuánto tiempo comió? </string>
    <string name="time_length_exercise">¿Por cuánto tiempo hizo ejercicio? </string>
     <string name="time_request">Favor seleccionar un tiempo para continuar </string>
    <string name="binge_loc_title">¿Sintió usted que no podía dejar de comer o como que si estuviera fuera de control? </string>
    <string name="binge_embarras_title">¿Sintió usted avergonzada o culpable por lo que comió?</string>
    <string name="binge_people_title">Seleccione un imagen que demuestra con quién estaba usted cuando comió y comió </string>

<!--  Count Activity -->
	<string name="alcohol_question">Seleccionar imagen de la bebida alcohólica que consumió </string>
    <string name="number_cigarette">¿Cuántos cigarros fumó? </string>
    <string name="number_alcohol">¿Cuántas bebidas alcohólicas tomó?</string>

    
<!-- Product Titles -->
  	<string name="pills_title">Seleccione el imagen que demuestra el tipo de pastilla para adelgazar que tomó </string>
    <string name="powders_title">Seleccione el imagen que demuestra el tipo de polvo para adelgazar que usó</string>
    <string name="teas_title">Seleccione el imagen que demuestra el tipo de té para adelgazar que tomó</string>
    <string name="drinks_title">Seleccione el imagen que demuestra el tipo de bebida para adelgazar que tomó</string>
    <string name="drops_title">Seleccione el imagen que demuestra el tipo de gotas para adelgazar que tomó</string>

<!--  Picture Taking Titles -->
  	<string name="pills_photo">Toma una foto de la pastilla para adelgazar que tomó</string>
    <string name="powders_photo">Toma una foto del polvo para adelgazar que usó  </string>
    <string name="teas_photo">Toma una foto del té para adelgazar que tomó</string>
    <string name="drinks_photo">Toma una foto de la bebida para adelgazar que tomó</string>
    <string name="drops_photo">Toma una foto de las gotas para adelgazar que usó </string>
	<string name="photo_confirm">¿Está satisfecha con su foto o quiere tomarla de nuevo? </string>
 
<!--  Voice Record Activity -->
    <string name="voice_title">Favor de presionar el botón rojo para registrar cómo hizo una dieta hoy </string>
	<string name="start_label">Comienze</string>
    <string name="stop_label">Alto</string>
    <string name="play_label">Escuche </string>
    <string name="pause_label">Pausar</string>
    <string name="play_instruction">Seleccione el “equis” para volver a grabar o la “palomita” para guardarla y terminar</string>
    <string name="record_instruction">La grabación se ha comenzado</string>
    <string name="record_instruction2">La grabación se ha detenido</string>
    <string name="record_message">Grabación iniciada </string>
    <string name="stop_message">Grabación detenida </string>
    <string name="play_message">Reproducir su grabación </string>
    <string name="pause_message">Reproducción pausada</string> 
    <string name="finish_record">Terminadoe </string>
    <string name="finish_message">Puede reproducir su grabación o haz clic en “terminado” para continuar</string>
    <string name="recording_request">Favor de hacer una grabación</string>
    <string name="stop_instruction">La grabación se ha comenzado. Seleccione el botón rojo para terminar</string>
	<string name="over_record">Para borrar su grabación y volver a grabar su mensaje, haz clic en la palomita. Si no, haz clic en la equis para continuar</string>
 	<string name="record_shake">Favor the presionar el botón rojo para decir lo que hay en su batido</string>
	
<!--  Camera Activity -->
    <string name="camera">Seleccione el icono de la cámara para tomar una foto</string>
    <string name="camera_message">¿Le gusta esa foto o quiere tomar otra?</string>

<!--  Diet Questions -->
    <string name="diet_question">¿Hoy hizo una dieta? </string>
    <string name="diet_type">Seleccione un imagen que demuestra su forma de hacer una dieta hoy</string>
    <string name="eod_reminder">Cuestión Dieta</string>
    <string name="eod_reminder_question">¿Existe alguna otra conducta que quiere reportar?</string>
    <string name="reminder_question">¿Existe alguna otra conducta que aún no ha reportado?</string>
    <string name="eod_done">Muchas gracias, es todo para hoy </string>
    
<!-- End Message -->   
	<string name="sound_message">Seleccione el icono de la bocina para escuchar a las instrucciones</string>
    <string name="done">Muchas gracias por reportar su conducta </string>

<!-- Other String -->
    <string name="soundIcon">Sound Icon </string>
    
<!-- Other String -->
    <string name="forceReminder">Force Reminder</string>
    <string name="forceLogout">Force Logout</string>
    
<!-- Number Pad -->
    <string name="num_one">1</string>
    <string name="num_two">2</string>
    <string name="num_three">3</string>
    <string name="num_four">4</string>
    <string name="num_five">5</string>
    <string name="num_six">6</string>
    <string name="num_seven">7</string>
    <string name="num_eight">8</string>
    <string name="num_nine">9</string>
    <string name="num_zero">0</string>
    <string name="reset">Reset</string>
    <string name="delete">Delete</string>
    
    <string name="heart">1</string>
    <string name="diamond">2</string>
    <string name="circle">3</string>
    <string name="star">4</string>
    <string name="octagon">5</string>
    <string name="triangle">6</string>
    
    <string name="img_pass_1">PassImg1</string>
    <string name="img_pass_2">PassImg2</string>
    <string name="img_pass_3">PassImg3</string>
    <string name="img_pass_4">PassImg4</string>
	<string name="img_pass_5">PassImg5</string>
	<string name="img_pass_6">PassImg6</string>
	
	<string name="remove_icon">Remove Image</string>
	<string name="check_icon">Approve Image</string>
</resources>