<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    android:orientation="vertical">
 
        <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="61dp"
		android:id="@id/topbar"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">
        
              	<ImageView
		    android:contentDescription="@string/soundIcon"
		    android:id="@+id/sound_Icon"
		    android:layout_width="40dp"
		    android:layout_height="40dp"
		    android:src="@drawable/soundicon2"
		    android:layout_alignParentRight="true"
		    android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/lbl_reset"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
           
            android:layout_toLeftOf="@+id/sound_Icon"
            android:gravity="center|center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold" 
            android:text="@string/update_password"/>

        
    </RelativeLayout>  
    
   <LinearLayout   
        android:layout_below="@id/topbar" android:gravity="center" 
        android:id="@+id/password_field"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center|center_vertical|center_horizontal"
    android:layout_marginBottom="5dp" android:layout_marginTop="8dp">
   	<ImageView
		    android:contentDescription="@string/img_pass_1"
		    android:id="@+id/img_pass_1"
		    android:layout_width="35dp"
		    android:layout_height="35dp"
		    android:layout_marginRight="8dp"
		   
		    android:background="#C3C3C3"/>
		     
   		<ImageView
		    android:contentDescription="@string/img_pass_2"
		    android:id="@+id/img_pass_2"
		    android:layout_width="35dp"
		    android:layout_height="35dp"
		    android:layout_marginRight="8dp" 
		    android:background="#C3C3C3"/>
   		
   		<ImageView
		    android:contentDescription="@string/img_pass_3"
		    android:id="@+id/img_pass_3"
		    android:layout_width="35dp"
		    android:layout_height="35dp"
		    android:layout_marginRight="8dp" 
		    android:background="#C3C3C3"/>
   			
   		<ImageView
		    android:contentDescription="@string/img_pass_4"
		    android:id="@+id/img_pass_4"
		    android:layout_width="35dp"
		    android:layout_height="35dp"
		    android:layout_marginRight="8dp"
		    android:background="#C3C3C3"/>
   	
   		 <ImageView
		    android:contentDescription="@string/img_pass_5"
		    android:id="@+id/img_pass_5"
		    android:layout_width="35dp"
		    android:layout_height="35dp"
		    android:layout_marginRight="8dp"
		    android:background="#C3C3C3"/>
   		 
   		   <ImageView
		    android:contentDescription="@string/img_pass_6"
		    android:id="@+id/img_pass_6"
		    android:layout_width="35dp"
		    android:layout_height="35dp"
		    android:layout_marginRight="8dp"
		    android:background="#C3C3C3"/>
				    </LinearLayout>
    <LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
		android:layout_gravity="center|center_horizontal"
		android:gravity="center" 
		android:layout_alignParentBottom="true"
		android:id="@+id/bottomBar">
		
			<ImageButton android:id="@+id/ok"
			    android:src="@drawable/img_approve"
				android:layout_width="60dp"
				android:layout_height="60dp"
				android:clickable="true"
				android:onClick="addGesture"
				android:layout_marginRight="50dp"
				android:layout_marginLeft="50dp"
				android:layout_marginBottom="5dp" android:layout_marginTop="5dp"/>
			
			<ImageButton android:id="@+id/remove"
			    android:src="@drawable/img_remove"
				android:layout_width="60dp"
				android:layout_height="60dp"
				android:clickable="true"
				android:onClick="cancelGesture"
				android:layout_marginRight="50dp"
				android:layout_marginBottom="5dp" android:layout_marginTop="5dp"/>
    </LinearLayout>        

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_above="@id/bottomBar"
            android:layout_below="@id/password_field"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center|center_horizontal"
            android:gravity="center" 
            android:id="@+id/numberPad">
        <TableRow>

            <Button
                android:id="@+id/btn_one"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/num_one"
                android:text="@string/num_one" >
            </Button>

            <Button
                android:id="@+id/btn_two"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/num_two"
                android:text="@string/num_two" >
            </Button>

            <Button
                android:id="@+id/btn_three"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/num_three"
                android:text="@string/num_three" >
            </Button>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_four"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/num_four"
                android:text="@string/num_four" >
            </Button>

            <Button
                android:id="@+id/btn_five"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/num_five"
                android:text="@string/num_five" >
            </Button>

            <Button
                android:id="@+id/btn_six"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/num_six"
                android:text="@string/num_six" >
            </Button>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_seven"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/num_seven"
                android:text="@string/num_seven" >
            </Button>

            <Button
                android:id="@+id/btn_eight"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/num_eight"
                android:text="@string/num_eight" >
            </Button>

            <Button
                android:id="@+id/btn_nine"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/num_nine"
                android:text="@string/num_nine" >
            </Button>
        </TableRow>

        <TableRow android:layout_gravity="center|center_horizontal"
                android:gravity="center" >

              <Button
                android:id="@+id/btn_zero"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/num_zero"
                android:text="@string/num_zero" >
            </Button>
            
            <ImageButton
                android:id="@+id/btn_delete"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/delete"
                android:scaleType="centerCrop"
                android:src="@drawable/delete"
                android:text="@string/delete">

            </ImageButton>
        </TableRow>
    </TableLayout>
 

    
</RelativeLayout>
