<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/behaviorscreen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
      
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:baselineAligned="true"
        android:gravity="center_vertical|center_horizontal|center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/behaviorBtn"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:onClick="behaviorOnClick"
            android:src="@drawable/home_control_weight"
            android:layout_marginBottom="5dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:textColor="@android:color/white" android:contentDescription="TODO"/>
        
           <RelativeLayout
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:gravity="center_vertical|center_horizontal"
        	android:orientation="horizontal" 
	        android:id="@+id/topLayout" android:layout_marginBottom="15dp">
		  <ImageButton
            android:id="@+id/playVoice"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/soundicon2"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            />
          <TextView
            android:id="@+id/titleMainMenuTextView"
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/mainmenu_title"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_toLeftOf="@id/playVoice"/>        
</RelativeLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_below="@id/bottomLayout"
        android:id="@+id/blankView" android:layout_marginBottom="5dp">
    </View>
    
<RelativeLayout 
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical|center_horizontal"
     android:orientation="horizontal" 
	 android:id="@+id/bottomLayout">
<LinearLayout 
      android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:baselineAligned="true"  android:layout_alignParentLeft="true"
        android:orientation="vertical" android:id="@+id/leftLayout">    
<ImageButton
    android:contentDescription="@string/reset"
    android:id="@+id/btnforceReminder"
    android:layout_width="80dp"
    android:layout_height="80dp"
     android:scaleType="centerCrop"
	android:adjustViewBounds="true"
    android:src="@drawable/home_dieting"/>
 </LinearLayout>
<LinearLayout 
      android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:baselineAligned="true" android:layout_toRightOf="@id/leftLayout"
        android:gravity="center_vertical|center_horizontal|center"
        android:orientation="vertical" android:id="@+id/middleLayout"> 
      <ImageButton
    android:contentDescription="@string/reset"
    android:id="@+id/btnresetPassword"
    android:layout_width="80dp"
    android:layout_height="80dp"
     android:scaleType="centerCrop"
	android:adjustViewBounds="true"
    android:src="@drawable/new_pass"/>
                <RelativeLayout
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:gravity="center_vertical|center_horizontal"
        	android:orientation="horizontal" 
	        android:id="@+id/passwordLayout">
		  <ImageButton
            android:id="@+id/updatePassword"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/soundicon2"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            />
          <TextView
            android:id="@+id/titlePasswordTextView"
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/change_password"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_toLeftOf="@id/updatePassword"/>        
</RelativeLayout>
</LinearLayout>
<LinearLayout 
      android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:baselineAligned="true"  android:layout_toRightOf="@id/middleLayout"
        android:orientation="vertical" android:id="@+id/rightLayout"> 
      <ImageButton
    android:contentDescription="@string/forceLogout"
    android:id="@+id/btnforceLogout"
    android:layout_width="80dp"
    android:layout_height="80dp"
     android:scaleType="centerCrop"
	android:adjustViewBounds="true"
    android:src="@drawable/lock"/>
		</LinearLayout>
   </RelativeLayout>
 </LinearLayout>

</LinearLayout>